--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,28 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Vite
+.vite
+.vite/deps
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+build
+out
+
+# Cache
+.cache
+.parcel-cache
+.eslintcache
+
+# OS files
+Thumbs.db
+.DS_Store
+
