--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
