--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.562.0",
